--- a/app/src/main/res/layout/fragment_classify.xml
+++ b/app/src/main/res/layout/fragment_classify.xml
@@ -4,17 +4,16 @@
     android:layout_height="match_parent"
     android:orientation="horizontal">
 
-    <ListView
-        android:id="@+id/lv_classify"
-        android:layout_weight="3"
-        android:scrollbars="none"
-        android:dividerHeight="0.2dp"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_classify_left"
+        android:layout_weight="0"
         android:layout_width="wrap_content"
         android:layout_height="match_parent" />
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_classify"
-        android:layout_width="match_parent"
+        android:id="@+id/rv_classify_right"
+        android:background="@color/grey"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1" />
 </LinearLayout>
