--- a/app/src/main/res/layout/activity_goods_details.xml
+++ b/app/src/main/res/layout/activity_goods_details.xml
@@ -44,6 +44,7 @@
                     android:layout_height="44dp"
                     android:layout_centerInParent="true"
                     android:layout_gravity="center"
+                    android:paddingRight="20dp"
                     android:textColor="@color/black"
                     android:textSize="15sp"
                     app:pstsDividerColor="@android:color/transparent"
@@ -58,8 +59,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:text="图文详情"
-                    android:textColor="#ffffff"
+                    android:paddingRight="20dp"
+                    android:textStyle="bold"
+                    android:text="@string/image_text_details"
+                    android:textColor="@color/black"
                     android:textSize="15sp"
                     android:visibility="gone" />
 
@@ -84,10 +87,11 @@
         </LinearLayout>
     </LinearLayout>
 
-    <android.support.v4.view.ViewPager
+    <com.zmq.shopmall.widget.NoScrollViewPager
         android:id="@+id/vp_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_above="@+id/ll_bottom"
         android:layout_below="@+id/ll_title_root" />
 
 
