--- a/app/src/main/res/layout/goods_detail_item_tab.xml
+++ b/app/src/main/res/layout/goods_detail_item_tab.xml
@@ -2,22 +2,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@color/white"
     android:orientation="vertical">
 
-    <LinearLayout
+    <RadioGroup
+        android:id="@+id/rg_goods"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tv_goods_introduce"
+        <RadioButton
+            android:id="@+id/rb_goods_introduce"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
+            android:button="@null"
             android:padding="10dp"
             android:text="@string/goods_introduce"
             android:textColor="@color/red"
@@ -28,13 +30,14 @@
             android:layout_height="match_parent"
             android:background="@color/line_color" />
 
-        <TextView
-            android:id="@+id/tv_specification_parameter"
+        <RadioButton
+            android:id="@+id/rb_specification_parameter"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
             android:padding="10dp"
+            android:button="@null"
             android:text="@string/specification_parameter"
             android:textColor="@color/t313131"
             android:textSize="13sp" />
@@ -44,17 +47,18 @@
             android:layout_height="match_parent"
             android:background="@color/line_color" />
 
-        <TextView
-            android:id="@+id/tv_packaging_after_sale"
+        <RadioButton
+            android:id="@+id/rb_packaging_after_sale"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
+            android:button="@null"
             android:padding="10dp"
             android:text="@string/packaging_after_sale"
             android:textColor="@color/t313131"
             android:textSize="13sp" />
-    </LinearLayout>
+    </RadioGroup>
 
     <FrameLayout
         android:id="@+id/fl_content"
