--- a/app/src/main/res/layout/rv_item_home_foot.xml
+++ b/app/src/main/res/layout/rv_item_home_foot.xml
@@ -2,19 +2,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/grey"
     android:orientation="vertical">
 
     <TextView
         android:text="@string/of_you_recommend"
         android:textSize="15sp"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/blue"
         android:gravity="center"
-        android:padding="5dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_home_foot"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
 </LinearLayout>
