--- a/app/src/main/res/layout/rv_item_child_home_foot.xml
+++ b/app/src/main/res/layout/rv_item_child_home_foot.xml
@@ -1,29 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/shape_login_white"
-    android:gravity="center"
-    android:orientation="vertical">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:background="@drawable/shape_login_white"
+              android:gravity="center"
+              android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/iv_icon"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:src="@mipmap/ic_timg" />
+    <RelativeLayout
+        android:id="@+id/rl_recommend"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/iv_icon"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:src="@mipmap/ic_timg"/>
+
+        <TextView
+            android:id="@+id/tv_rank"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:background="@mipmap/ic_rank_bg"
+            android:gravity="center"
+            android:text="1"
+            android:textColor="@color/white"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            android:visibility="gone"/>
+    </RelativeLayout>
 
     <TextView
         android:id="@+id/tv_name"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ellipsize="end"
-        android:padding="5dp"
         android:maxLines="2"
+        android:layout_below="@+id/rl_recommend"
+        android:padding="5dp"
         android:text="HTCJD大家的的三六九等萨阿德放假了的数据发了多少积分卡的死发大幅大事发生大"
         android:textColor="@color/black"
-        android:textSize="12sp" />
+        android:textSize="12sp"/>
 
     <LinearLayout
+        android:layout_below="@+id/tv_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -35,10 +59,10 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center|left"
-            android:text="￥154.00"
             android:padding="2dp"
+            android:text="￥154.00"
             android:textColor="@color/red"
-            android:textSize="12sp" />
+            android:textSize="12sp"/>
 
         <TextView
             android:id="@+id/tv_find_similar"
@@ -48,21 +72,22 @@
             android:background="@drawable/rv_classify_left_color"
             android:gravity="right"
             android:padding="2dp"
-            android:visibility="gone"
             android:text="@string/findSimilar"
             android:textColor="@color/t313131"
-            android:textSize="12sp" />
+            android:textSize="12sp"
+            android:visibility="gone"/>
+
         <TextView
             android:id="@+id/tv_shopping_trolley"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0"
             android:background="@drawable/rv_classify_left_color"
+            android:drawableLeft="@mipmap/ic_shopping_trolley"
             android:gravity="right"
             android:padding="3dp"
-            android:drawableLeft="@mipmap/ic_shopping_trolley"
-            android:visibility="gone"
             android:textColor="@color/t313131"
-            android:textSize="12sp" />
+            android:textSize="12sp"
+            android:visibility="gone"/>
     </LinearLayout>
-</LinearLayout>
+</RelativeLayout>
