--- a/app/src/main/res/layout/rv_item_child_home_foot.xml
+++ b/app/src/main/res/layout/rv_item_child_home_foot.xml
@@ -13,8 +13,8 @@
 
         <ImageView
             android:id="@+id/iv_icon"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:src="@mipmap/ic_timg"/>
@@ -31,6 +31,7 @@
             android:textColor="@color/white"
             android:textSize="12sp"
             android:textStyle="bold"
+            android:paddingBottom="2dp"
             android:visibility="gone"/>
     </RelativeLayout>
 
