--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:jp="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+              xmlns:jp="http://schemas.android.com/apk/res-auto"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              xmlns:tl="http://schemas.android.com/tools"
+              android:orientation="vertical">
 
     <include layout="@layout/search_tool" />
 
@@ -19,4 +20,22 @@
         android:layout_height="56dp"
         android:background="#fff"
         jp:TabTextSize="12sp" />
+    <!--<com.flyco.tablayout.CommonTabLayout-->
+        <!--android:id="@+id/ctl_tab"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="48dp"-->
+        <!--android:background="#ffffff"-->
+        <!--tl:tl_iconGravity="LEFT"-->
+        <!--tl:tl_iconHeight="18dp"-->
+        <!--tl:tl_iconMargin="5dp"-->
+        <!--tl:tl_iconWidth="18dp"-->
+        <!--tl:tl_indicator_bounce_enable="false"-->
+        <!--tl:tl_indicator_color="#2C97DE"-->
+        <!--tl:tl_indicator_gravity="BOTTOM"-->
+        <!--tl:tl_textSelectColor="#2C97DE"-->
+        <!--tl:tl_textUnselectColor="#66000000"-->
+        <!--tl:tl_textsize="15sp"-->
+        <!--tl:tl_underline_color="#DDDDDD"-->
+        <!--tl:tl_underline_gravity="TOP"-->
+        <!--tl:tl_underline_height="1dp"/>-->
 </LinearLayout>
