--- a/app/src/main/res/layout/fragment_myself.xml
+++ b/app/src/main/res/layout/fragment_myself.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/background_light">
+                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                 android:layout_width="match_parent"
+                                                 android:layout_height="match_parent"
+                                                 android:background="@android:color/background_light">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
@@ -33,23 +33,38 @@
                     android:layout_height="match_parent"
                     android:scaleType="centerCrop"
                     android:src="@mipmap/ic_myself_bg"
-                    app:layout_collapseMode="parallax" />
+                    app:layout_collapseMode="parallax"/>
 
-                <ImageView
-                    android:id="@+id/iv_user_max"
+                <LinearLayout
+                    android:id="@+id/ll_user_login"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="20dp"
-                    android:src="@mipmap/ic_user_max"
-                    app:layout_collapseMode="pin" />
+                    app:layout_collapseMode="pin">
+
+                    <ImageView
+                        android:id="@+id/iv_user_max"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@mipmap/ic_user_max"/>
+                    <TextView
+                        android:id="@+id/tv_login"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/login_and_register"
+                        android:layout_marginLeft="10dp"
+                        android:textSize="15sp"
+                        android:textColor="@color/white"
+                        android:layout_gravity="center"/>
+                </LinearLayout>
             </RelativeLayout>
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:background="@color/translucent_half"
+                android:background="@color/transparent"
                 app:layout_collapseMode="pin"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
@@ -63,7 +78,7 @@
                         android:layout_height="28dp"
                         android:layout_centerVertical="true"
                         android:src="@mipmap/ic_user"
-                        android:visibility="gone" />
+                        android:visibility="gone"/>
 
                     <TextView
                         android:id="@+id/tv_title"
@@ -73,7 +88,7 @@
                         android:text="@string/myself"
                         android:textColor="@color/black"
                         android:textSize="16sp"
-                        android:visibility="gone" />
+                        android:visibility="gone"/>
 
                     <ImageView
                         android:id="@+id/iv_set"
@@ -82,7 +97,7 @@
                         android:layout_centerVertical="true"
                         android:layout_marginRight="15dp"
                         android:layout_toLeftOf="@+id/iv_news"
-                        android:src="@mipmap/ic_set" />
+                        android:src="@mipmap/ic_set"/>
 
                     <ImageView
                         android:id="@+id/iv_news"
@@ -91,7 +106,7 @@
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
                         android:layout_marginRight="10dp"
-                        android:src="@mipmap/ic_news" />
+                        android:src="@mipmap/ic_news"/>
                 </RelativeLayout>
             </android.support.v7.widget.Toolbar>
         </android.support.design.widget.CollapsingToolbarLayout>
@@ -124,7 +139,7 @@
                     android:gravity="center"
                     android:text="@string/obligation"
                     android:textColor="@color/black"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"/>
 
                 <TextView
                     android:id="@+id/tv_wait_for_receive"
@@ -136,7 +151,7 @@
                     android:gravity="center"
                     android:text="@string/wait_for_receiving"
                     android:textColor="@color/black"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"/>
 
                 <TextView
                     android:id="@+id/tv_no_evaluated"
@@ -148,7 +163,7 @@
                     android:gravity="center"
                     android:text="@string/no_evaluated"
                     android:textColor="@color/black"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"/>
 
                 <TextView
                     android:id="@+id/tv_after_sale"
@@ -160,12 +175,12 @@
                     android:gravity="center"
                     android:text="@string/after_sale"
                     android:textColor="@color/black"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"/>
 
                 <View
                     android:layout_width="0.5dp"
                     android:layout_height="match_parent"
-                    android:background="@color/line_color" />
+                    android:background="@color/line_color"/>
 
                 <TextView
                     android:id="@+id/tv_my_order"
@@ -177,14 +192,14 @@
                     android:gravity="center"
                     android:text="@string/my_order"
                     android:textColor="@color/black"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"/>
             </LinearLayout>
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_myself"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:nestedScrollingEnabled="false" />
+                android:nestedScrollingEnabled="false"/>
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 </android.support.design.widget.CoordinatorLayout>
