--- a/app/src/main/res/layout/item_child_dia_goods_sku.xml
+++ b/app/src/main/res/layout/item_child_dia_goods_sku.xml
@@ -1,22 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:gravity="center"
-              android:orientation="vertical">
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+          android:id="@+id/tv_goods_sku"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:background="@drawable/shape_login_white"
+          android:layout_margin="3dp"
+          android:paddingBottom="5dp"
+          android:paddingLeft="15dp"
+          android:paddingRight="15dp"
+          android:paddingTop="3dp"
+          android:gravity="center"
+          android:text="@string/count"
+          android:textColor="@color/black"
+          android:textSize="13sp">
 
-    <TextView
-        android:id="@+id/tv_goods_sku"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
-        android:gravity="center"
-        android:background="@drawable/shape_login_white"
-        android:paddingBottom="5dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:paddingTop="5dp"
-        android:text="@string/count"
-        android:textColor="@color/black"
-        android:textSize="13sp"/>
-</LinearLayout>
+</TextView>
