--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,6 +25,7 @@
             android:id="@+id/et_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/shape_login_gray"
             android:hint="@string/et_login"
             android:paddingBottom="20dp"
             android:paddingLeft="50dp"
