--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,23 +14,35 @@
             android:id="@+id/iv_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@mipmap/ic_back" />
+            android:src="@mipmap/ic_back"/>
 
-        <EditText
-            android:id="@+id/et_search"
+        <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:layout_weight="1"
-            android:background="@drawable/shape_edit_corners_bg"
-            android:drawableLeft="@mipmap/ic_search"
-            android:drawablePadding="5dp"
-            android:drawableRight="@mipmap/ic_voice"
-            android:hint="@string/search"
-            android:padding="8dp"
-            android:textColorHint="@color/gary"
-            android:textSize="14sp" />
+            android:layout_weight="1">
+
+            <EditText
+                android:id="@+id/et_search"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/shape_edit_corners_bg"
+                android:drawableLeft="@mipmap/ic_search"
+                android:drawablePadding="5dp"
+                android:hint="@string/search"
+                android:padding="8dp"
+                android:textColorHint="@color/gary"
+                android:textSize="14sp"/>
+            <ImageView
+                android:id="@+id/iv_voice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/ic_voice"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="10dp"
+                android:layout_alignParentRight="true"/>
+        </RelativeLayout>
 
         <TextView
             android:id="@+id/tv_search"
@@ -38,13 +50,13 @@
             android:layout_height="wrap_content"
             android:text="@string/search"
             android:textColor="@color/t313131"
-            android:textSize="14sp" />
+            android:textSize="14sp"/>
     </LinearLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:background="@color/line_color" />
+        android:background="@color/line_color"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -54,10 +66,11 @@
         android:layout_marginTop="20dp"
         android:text="@string/hot_search"
         android:textColor="@color/black"
-        android:textSize="16sp" />
+        android:textSize="16sp"/>
 
     <android.support.v7.widget.RecyclerView
+        android:paddingLeft="5dp"
         android:id="@+id/rv_hot_search"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"/>
 </LinearLayout>
