--- a/app/src/main/res/layout/rv_item_child_home_foot.xml
+++ b/app/src/main/res/layout/rv_item_child_home_foot.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/shape_login_white"
-                android:gravity="center"
-                android:orientation="vertical">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:background="@drawable/shape_login_white"
+              android:gravity="center"
+              android:orientation="vertical">
 
     <RelativeLayout
         android:id="@+id/rl_recommend"
@@ -27,7 +27,7 @@
             android:layout_alignParentTop="true"
             android:background="@mipmap/ic_rank_bg"
             android:gravity="center"
-            android:paddingBottom="2dp"
+            android:paddingBottom="3dp"
             android:text="1"
             android:textColor="@color/white"
             android:textSize="12sp"
@@ -95,4 +95,4 @@
             android:textSize="12sp"
             android:visibility="gone"/>
     </LinearLayout>
-</RelativeLayout>
+</LinearLayout>
