--- a/app/src/main/res/layout/rv_item_expandable_2.xml
+++ b/app/src/main/res/layout/rv_item_expandable_2.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-          android:id="@+id/tv_child_title"
+<CheckBox xmlns:android="http://schemas.android.com/apk/res/android"
+          android:id="@+id/cb_child_title"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@color/grey"
-          android:drawableRight="@mipmap/ic_down_up"
+          android:button="@null"
           android:paddingBottom="10dp"
           android:paddingLeft="20dp"
+          android:paddingRight="10dp"
           android:paddingTop="10dp"
           android:text="@string/all_classify"
           android:textColor="@color/black"
           android:textSize="13sp">
-</TextView>
+</CheckBox>
