--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -67,6 +67,7 @@
     <color name="tcbcbcb">#cbcbcb</color>
     <color name="tc1c1c5">#c1c1c5</color>
     <color name="te5e5e5">#e5e5e5</color>
+    <color name="tf3f2f2">#f3f2f2</color>
     <color name="t969696">#969696</color>
     <color name="t313131">#313131</color>
     <color name="tcccccc">#cccccc</color>
