--- a/app/src/main/res/layout/rv_item_expandable_0.xml
+++ b/app/src/main/res/layout/rv_item_expandable_0.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-          android:id="@+id/tv_all_classify"
+<CheckBox xmlns:android="http://schemas.android.com/apk/res/android"
+          android:id="@+id/cb_all_classify"
           android:layout_width="match_parent"
           android:background="@color/white"
           android:layout_height="wrap_content"
           android:padding="10dp"
+          android:button="@null"
           android:text="@string/all_classify"
           android:textColor="@color/black"
           android:textSize="13sp">
-</TextView>
+</CheckBox>
